Refactored B# Table Rows - Removed :before "+" sign - Added new function "Accordian" to expand/collapse the row. - Added logic to make sure all the row elements are clickable - Updated class .BnumDetailsContainer to support "Accordian" function - Cleaned up some styles to use rem instead of px
Added Help Icon to Filters - not complete

--- a/css/msapp.css
+++ b/css/msapp.css
@@ -43,8 +43,8 @@
     margin-top: -.25rem;
     cursor: pointer;
     vertical-align: middle;
-    min-width: 1.375rem;
-    min-height: 1.375rem;
+    min-width: 1.25rem;
+    min-height: 1.25rem;
     display: inline-block;
 }
 
@@ -218,7 +218,7 @@
     width: 100%;
     border: 1px solid #ccc;
     text-align: left;
-    font-size: 12pt;
+    font-size: 1rem;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -226,32 +226,18 @@
   background-color: #ccc;
 }
 
-.BnumRow:before {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 12px;
-    font-weight:700;
-    color: white;
-    float: left;
-    margin: 0 14px;
-    padding-top: 14px;
-}
-
-.BnumRow:before:active {
-  content: "\2212";
-}
-
 .BnumHeaderContainer {
   cursor: pointer;
   display: flex;
   flex-wrap: wrap;
-  padding: 14px 0;
+  padding: .875rem 1rem;
   max-width: 100%;
 }
 
 .Bnum_Number {
   font-weight: 700;
   margin-bottom: 0;
-  margin-right: 10px;
+  margin-right: .75rem;
   max-width: 100%;
   -webkit-flex: 0 0 auto;
 }
@@ -267,10 +253,14 @@
 
 .BnumDetailsContainer {
   margin: 0;
-  padding: 30px;
+/*  padding: 30px;*/
   overflow: hidden;
   background-color: #f2f2f2;
-  border-top: 1px solid #ccc;
+/*  border-top: 1px solid #ccc;*/
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.3s ease-out;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .BnumDetailsMainSection {
